--- a/app/src/main/res/navigation/nav_main_graph.xml
+++ b/app/src/main/res/navigation/nav_main_graph.xml
@@ -1,4 +1,4 @@
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ MIT License
   ~
   ~ Copyright (c) 2021 Greyp Bikes d.o.o.
@@ -22,23 +22,28 @@
   ~ SOFTWARE.
   -->
 
-<resources xmlns:tools="http://schemas.android.com/tools">
-  <!-- Base application theme. -->
-  <style name="Theme.Demo" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-    <!-- Primary brand color. -->
-    <item name="colorPrimary">@color/greyp_yellow</item>
-    <item name="colorPrimaryVariant">@color/greyp_yellow</item>
-    <item name="colorOnPrimary">@color/black</item>
-    <!-- Secondary brand color. -->
-    <item name="colorSecondary">@color/greyp_yellow</item>
-    <item name="colorSecondaryVariant">@color/greyp_yellow</item>
-    <item name="colorOnSecondary">@color/black</item>
-    <!-- Status bar color. -->
-    <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-    <!-- Customize your theme here. -->
-  </style>
-  <style name="Theme.Demo.NoActionBar">
-    <item name="windowActionBar">false</item>
-    <item name="windowNoTitle">true</item>
-  </style>
-</resources>
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/nav_main_graph"
+  app:startDestination="@id/ListFragment">
+
+  <fragment
+    android:id="@+id/ListFragment"
+    android:name="com.greyp.android.demo.ui.list.ListFragment"
+    android:label=""
+    tools:layout="@layout/fragment_list">
+    <action
+      android:id="@+id/action_ListFragment_to_MapFragment"
+      app:destination="@id/MapFragment" />
+  </fragment>
+  <fragment
+    android:id="@+id/MapFragment"
+    android:name="com.greyp.android.demo.ui.map.MapFragment"
+    android:label=""
+    tools:layout="@layout/map_fragment">
+    <action
+      android:id="@+id/action_MapFragment_to_ListFragment"
+      app:destination="@id/ListFragment" />
+  </fragment>
+</navigation>
