--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -27,23 +27,35 @@
   android:layout_height="wrap_content"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   android:elevation="10dp"
+  android:layout_margin="20dp"
   app:cardCornerRadius="15dp">
 
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp">
 
     <TextView
       android:layout_width="0dp"
-      android:layout_height="40dp"
+      android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:gravity="center"
       android:textSize="20sp"
+      android:textColor="@color/black"
       android:id="@+id/tv_place_name"
       android:textStyle="bold"
       />
+    <TextView
+      android:id="@+id/tv_address"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:gravity="right"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/tv_place_name"/>
+
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 
