--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<!--
   ~ MIT License
   ~
   ~ Copyright (c) 2021 Greyp Bikes d.o.o.
@@ -22,10 +22,6 @@
   ~ SOFTWARE.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
-  <item android:id="@+id/action_search"
-    android:title="Search"
-    android:icon="@drawable/ic_baseline_search_24"
-    app:showAsAction="always"/>
-</menu>
+<resources>
+  <dimen name="fab_margin">16dp</dimen>
+</resources>
