Added Network monitoring

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,4 +27,5 @@
   <color name="greyp_yellow">#F6EA01</color>
   <color name="black">#FF000000</color>
   <color name="white">#FFFFFFFF</color>
+  <color name="sea_green">#2e8b57</color>
 </resources>
