--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -25,9 +25,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/main_layout">
   <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rv_items"/>
+  <ProgressBar
+    android:layout_width="@dimen/dimen_60dp"
+    android:layout_height="@dimen/dimen_60dp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:id="@+id/progress_bar"/>
+  <com.greyp.android.demo.ui.views.ErrorView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/error_view"
+    app:errorMessage="@string/no_items_msg"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
