--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -65,16 +65,16 @@
     android:layout_height="wrap_content"
     android:layout_gravity="end|bottom"
     android:orientation="vertical"
-    android:layout_margin="16dp">
+    android:layout_margin="@dimen/dimen_16dp">
     <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/fab_map"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:contentDescription="@null"
       android:src="@drawable/ic_baseline_map_24"
-      android:elevation="5dp"
-      android:layout_marginBottom="16dp"
-      android:layout_marginEnd="5dp"
+      android:elevation="@dimen/dimen_5dp"
+      android:layout_marginBottom="@dimen/dimen_16dp"
+      android:layout_marginEnd="@dimen/dimen_5dp"
       app:layout_anchorGravity="top|center"
       app:layout_constraintBottom_toTopOf="@id/fab_list"
       app:layout_constraintEnd_toEndOf="parent" />
@@ -86,8 +86,8 @@
       android:src="@drawable/ic_baseline_list_24"
       android:layout_gravity="bottom|end"
       app:layout_anchor="@id/fab_map"
-      android:layout_marginBottom="10dp"
-      android:layout_marginEnd="5dp"
+      android:layout_marginBottom="@dimen/dimen_10dp"
+      android:layout_marginEnd="@dimen/dimen_5dp"
       app:layout_anchorGravity="bottom|right|end"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent" />
