--- a/app/src/main/res/layout/view_error.xml
+++ b/app/src/main/res/layout/view_error.xml
@@ -22,10 +22,32 @@
   ~ SOFTWARE.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
   xmlns:app="http://schemas.android.com/apk/res-auto">
-  <item android:id="@+id/action_search"
-    android:title="@string/action_search"
-    android:icon="@drawable/ic_baseline_search_24"
-    app:showAsAction="always"/>
-</menu>
+
+  <ImageView
+    android:layout_width="@dimen/dimen_80dp"
+    android:layout_height="@dimen/dimen_80dp"
+    android:src="@drawable/ic_sad_face"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:id="@+id/iv_sad_face"
+    android:contentDescription="@null"/>
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/iv_sad_face"
+    android:textSize="@dimen/dimen_18sp"
+    android:id="@+id/tv_message"
+    android:gravity="center"
+    android:textColor="@color/black"
+    android:layout_marginTop="@dimen/dimen_10dp"
+    android:textStyle="bold"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
