--- a/app/src/main/res/layout/view_search_dialog.xml
+++ b/app/src/main/res/layout/view_search_dialog.xml
@@ -23,99 +23,99 @@
   -->
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
+  android:layout_height="wrap_content">
 
-  <TextView
+  <Button
+    android:id="@+id/bt_submit"
     android:layout_width="0dp"
-    android:layout_height="60dp"
-    android:id="@+id/tv_title"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-   app:layout_constraintEnd_toEndOf="parent"
-    android:gravity="center"
-    android:textSize="20sp"
-    android:textStyle="bold"
-    android:textColor="@color/black"
-    android:text="What do you need?"/>
+    android:layout_height="match_parent"
+    android:layout_margin="10dp"
+    android:text="Submit"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toEndOf="@id/bt_cancel"
+    app:layout_constraintTop_toBottomOf="@id/slider" />
 
 
   <EditText
+    android:id="@+id/et_input"
     android:layout_width="0dp"
     android:layout_height="60dp"
-    android:hint="restaurant"
-    android:id="@+id/et_input"
-    app:layout_constraintStart_toStartOf="parent"
+    android:layout_margin="@dimen/dimen_10dp"
+    android:hint="@string/restaurant_hint"
     app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+  <TextView
+    android:id="@+id/tv_title"
+    android:layout_width="0dp"
+    android:layout_height="@dimen/dimen_60dp"
+    android:gravity="center"
+    android:text="@string/what_do_you_need"
+    android:textColor="@color/black"
+    android:textSize="@dimen/dimen_20sp"
+    android:textStyle="bold"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+  <androidx.appcompat.widget.AppCompatButton
+    android:id="@+id/bt_cancel"
+    android:layout_width="0dp"
+    android:layout_height="match_parent"
     android:layout_margin="10dp"
-    app:layout_constraintTop_toBottomOf="@id/tv_title"/>
+    android:background="#A4a4a4"
+    android:text="Cancel"
+    app:layout_constraintEnd_toStartOf="@id/bt_submit"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/slider" />
 
   <androidx.constraintlayout.widget.ConstraintLayout
+    android:id="@+id/slider"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:id="@+id/slider"
-    app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/et_input">
 
     <TextView
+      android:id="@+id/tv_min"
       android:layout_width="wrap_content"
       android:layout_height="0dp"
-      android:text="0 km"
       android:layout_marginStart="10dp"
+      android:gravity="center_vertical"
+      android:text="@string/min_value_slider"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center_vertical"
-      android:id="@+id/tv_min"/>
+      app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+      android:id="@+id/tv_end"
+      android:layout_width="wrap_content"
+      android:layout_height="0dp"
+      android:layout_marginEnd="10dp"
+      android:gravity="center_vertical"
+      android:text="@string/max_value_slider"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.slider.Slider
+      android:id="@+id/radius_slider"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
-    app:layout_constraintStart_toEndOf="@id/tv_min"
-     app:layout_constraintEnd_toStartOf="@id/tv_end"
-      app:layout_constraintTop_toTopOf="parent"
-      android:layout_margin="10dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      android:id="@+id/radius_slider"
+      android:layout_margin="@dimen/dimen_10dp"
       android:stepSize="1.0"
+      android:value="3"
       android:valueFrom="0"
       android:valueTo="20"
       app:labelBehavior="floating"
-      android:value="3"/>
-
-    <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="0dp"
-      android:text="20 km"
-      android:layout_marginEnd="10dp"
-      app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-      android:gravity="center_vertical"
-      android:id="@+id/tv_end"/>
+      app:layout_constraintEnd_toStartOf="@id/tv_end"
+      app:layout_constraintStart_toEndOf="@id/tv_min"
+      app:layout_constraintTop_toTopOf="parent" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
-  <androidx.appcompat.widget.AppCompatButton
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:text="Cancel"
-    android:id="@+id/bt_cancel"
-    android:layout_margin="10dp"
-    android:background="#A4a4a4"
-    app:layout_constraintTop_toBottomOf="@id/slider"
-    app:layout_constraintStart_toStartOf="parent"
-   app:layout_constraintEnd_toStartOf="@id/bt_submit"
-    />
-  <Button
-    android:layout_width="0dp"
-    android:layout_height="match_parent"
-    android:text="Submit"
-    android:id="@+id/bt_submit"
-    android:layout_margin="10dp"
-    app:layout_constraintTop_toBottomOf="@id/slider"
-    app:layout_constraintStart_toEndOf="@id/bt_cancel"
-    app:layout_constraintEnd_toEndOf="parent"
-    />
 </androidx.constraintlayout.widget.ConstraintLayout>
