--- a/app/src/main/res/navigation/nav_main_graph.xml
+++ b/app/src/main/res/navigation/nav_main_graph.xml
@@ -35,7 +35,10 @@
     tools:layout="@layout/fragment_list">
     <action
       android:id="@+id/action_ListFragment_to_MapFragment"
-      app:destination="@id/MapFragment" />
+      app:destination="@id/MapFragment"
+      app:popUpToInclusive="true"
+      app:popUpTo="@navigation/nav_main_graph"
+      />
   </fragment>
   <fragment
     android:id="@+id/MapFragment"
@@ -44,6 +47,9 @@
     tools:layout="@layout/map_fragment">
     <action
       android:id="@+id/action_MapFragment_to_ListFragment"
-      app:destination="@id/ListFragment" />
+      app:destination="@id/ListFragment"
+      app:popUpTo="@id/ListFragment"
+      app:popUpToInclusive="true"
+      />
   </fragment>
 </navigation>
