--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -35,7 +35,13 @@
     <item name="colorOnSecondary">@color/black</item>
     <!-- Status bar color. -->
     <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    <item name="android:windowLightStatusBar">true</item>
     <!-- Customize your theme here. -->
+  </style>
+  <style name="Theme.Demo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <item name="titleTextColor">@color/black</item>
+    <item name="android:textColor">@color/black</item>
+    <item name="actionMenuTextColor">@color/black</item>
   </style>
   <style name="Theme.Demo.NoActionBar">
     <item name="windowActionBar">false</item>
