--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,15 +36,17 @@
     <!-- Status bar color. -->
     <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     <!-- Customize your theme here. -->
-    <item name="titleTextColor">@color/black</item>
-    <item name="actionMenuTextColor">@color/black</item>
   </style>
 
   <style name="Theme.Demo.NoActionBar">
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
   </style>
-  <style name="Theme.Demo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+  <style name="Theme.Demo.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+    <item name="titleTextColor">@color/black</item>
+    <item name="android:textColor">@color/black</item>
+    <item name="actionMenuTextColor">@color/black</item>
+  </style>
 
   <style name="Theme.Demo.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 </resources>
