--- a/app/src/main/res/layout/view_search_dialog.xml
+++ b/app/src/main/res/layout/view_search_dialog.xml
@@ -31,8 +31,8 @@
     android:id="@+id/bt_submit"
     android:layout_width="0dp"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:text="Submit"
+    android:layout_margin="@dimen/dimen_10dp"
+    android:text="@string/submit"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@id/bt_cancel"
     app:layout_constraintTop_toBottomOf="@id/slider" />
@@ -41,9 +41,11 @@
   <EditText
     android:id="@+id/et_input"
     android:layout_width="0dp"
-    android:layout_height="60dp"
+    android:layout_height="@dimen/dimen_60dp"
     android:layout_margin="@dimen/dimen_10dp"
     android:hint="@string/restaurant_hint"
+    android:inputType="text"
+    android:autofillHints="name"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/tv_title" />
@@ -65,9 +67,9 @@
     android:id="@+id/bt_cancel"
     android:layout_width="0dp"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
-    android:background="#A4a4a4"
-    android:text="Cancel"
+    android:layout_margin="@dimen/dimen_10dp"
+    android:background="@color/button_grey"
+    android:text="@android:string/cancel"
     app:layout_constraintEnd_toStartOf="@id/bt_submit"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/slider" />
