--- a/app/src/main/res/layout/item_place.xml
+++ b/app/src/main/res/layout/item_place.xml
@@ -51,7 +51,7 @@
       android:id="@+id/tv_address"
       android:layout_width="0dp"
       android:layout_height="match_parent"
-      android:gravity="right"
+      android:gravity="end"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/tv_place_name"/>
